--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 /* Global definitions Lukas */
 
 :root {
-	--activecolor: #505cff;
+	--activecolor: #505cff; /* # 505cff */
 	--buttonbackgroundcolor: rgba(72, 118, 247, 0.1);
 	--buttonhovercolor: #4876f7;
 	--headerwidth: 30%;
@@ -225,7 +225,8 @@ a {
 	-ms-transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 	transition: color 0.2s ease-in-out, border-color 0.2s ease-in-out;
 	border-bottom: dotted 1px;
-	color: var(--activecolor);
+	color:  var(--activecolor); 
+	/* border-bottom-color: var(--activecolor); */
 	text-decoration: none;
 }
 
@@ -2437,6 +2438,12 @@ ul.emphasized li::before {
 	display: inline-block;
 	width: 1em;
 	margin-left: -1em;
+}
+
+ul.no-bullets {
+  list-style-type: none; 
+  padding: 0;
+  margin: 0;
 }
 
 /* Icons */
