--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2384,20 +2384,20 @@ input[type="radio"]+label:before {
 }
 
 /* Video */
-video {
+/* video {
 	border-radius: 0.35em;
 	margin: 0 1em 0 0;
 	width: 35%;
 	max-width: 35%;
-	float: left;
-}
+	float: left; */
+/* }
 video.left {
 	float: left;
 	text-align: top;
 	margin: 0 1.5em 1em 0;
 	top: 0.25em;
 	border-radius: 0.35em;
-}
+} */
 
 /* List */
 
